--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1816,11 +1816,25 @@ An ancient human genome illuminates human demography in Eurasia and Europe.},
 }
 
 
-@article{hajdinjak_early_2021,
-	title = {An early expansion of modern humans to {Europe} had recent {Neandertal} ancestors and links to {Asia}},
-	journal = {unpublished},
-	author = {Hajdinjak, Mateja and Mafessoni, Fabrizio and Skov, Laurits and Vernot, Benjamin and Peter, Benjamin and Meyer, Matthias and Skoglund, Pontus and Kelso, Janet and Pääbo, Svante},
-	year = {2021}
+
+
+@article{hajdinjak_initial_2021,
+	title = {Initial {Upper} {Palaeolithic} humans in {Europe} had recent {Neanderthal} ancestry},
+	volume = {592},
+	copyright = {2021 The Author(s)},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-021-03335-3},
+	doi = {10.1038/s41586-021-03335-3},
+	abstract = {Modern humans appeared in Europe by at least 45,000 years ago1–5, but the extent of their interactions with Neanderthals, who disappeared by about 40,000 years ago6, and their relationship to the broader expansion of modern humans outside Africa are poorly understood. Here we present genome-wide data from three individuals dated to between 45,930 and 42,580 years ago from Bacho Kiro Cave, Bulgaria1,2. They are the earliest Late Pleistocene modern humans known to have been recovered in Europe so far, and were found in association with an Initial Upper Palaeolithic artefact assemblage. Unlike two previously studied individuals of similar ages from Romania7 and Siberia8 who did not contribute detectably to later populations, these individuals are more closely related to present-day and ancient populations in East Asia and the Americas than to later west Eurasian populations. This indicates that they belonged to a modern human migration into Europe that was not previously known from the genetic record, and provides evidence that there was at least some continuity between the earliest modern humans in Europe and later people in Eurasia. Moreover, we find that all three individuals had Neanderthal ancestors a few generations back in their family history, confirming that the first European modern humans mixed with Neanderthals and suggesting that such mixing could have been common.},
+	language = {en},
+	number = {7853},
+	urldate = {2021-05-26},
+	journal = {Nature},
+	author = {Hajdinjak, Mateja and Mafessoni, Fabrizio and Skov, Laurits and Vernot, Benjamin and Hübner, Alexander and Fu, Qiaomei and Essel, Elena and Nagel, Sarah and Nickel, Birgit and Richter, Julia and Moldovan, Oana Teodora and Constantin, Silviu and Endarova, Elena and Zahariev, Nikolay and Spasov, Rosen and Welker, Frido and Smith, Geoff M. and Sinet-Mathiot, Virginie and Paskulin, Lindsey and Fewlass, Helen and Talamo, Sahra and Rezek, Zeljko and Sirakova, Svoboda and Sirakov, Nikolay and McPherron, Shannon P. and Tsanova, Tsenka and Hublin, Jean-Jacques and Peter, Benjamin M. and Meyer, Matthias and Skoglund, Pontus and Kelso, Janet and Pääbo, Svante},
+	month = apr,
+	year = {2021},
+	pages = {253--257},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/F8GQRJ4B/Hajdinjak et al. - 2021 - Initial Upper Palaeolithic humans in Europe had re.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/CMSSQ2YW/s41586-021-03335-3.html:text/html}
 }
 
 
@@ -1879,4 +1893,13 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	publisher = {Springer},
 	author = {Yee, Thomas. W},
 	year = {2015}
+}
+
+
+@book{ardia_deoptim_2016,
+	title = {{DEoptim}: {Differential} {Evolution} in {R}},
+	url = {https://CRAN.R-project.org/package=DEoptim},
+	author = {Ardia, David and Mullen, Katharine M. and Peterson, Brian G. and Ulrich, Joshua},
+	year = {2016},
+	annote = {version 2.2-4}
 }
